--- a/test/fixtures/exams.yml
+++ b/test/fixtures/exams.yml
@@ -1,3 +1,18 @@
+# == Schema Information
+#
+# Table name: exams
+#
+#  id            :integer          not null, primary key
+#  name          :string(255)
+#  user_id       :integer
+#  category_id   :integer
+#  created_at    :datetime
+#  updated_at    :datetime
+#  result_array  :text
+#  result_time   :integer
+#  volatile_json :text
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
