--- a/test/fixtures/topics.yml
+++ b/test/fixtures/topics.yml
@@ -11,6 +11,7 @@
 #  updated_at            :datetime
 #  exam_id               :integer
 #  volatile_json         :text
+#  description           :text
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
