--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -16,6 +16,7 @@
 #  last_sign_in_at        :datetime
 #  current_sign_in_ip     :string(255)
 #  last_sign_in_ip        :string(255)
+#  property_json          :text             default("{}")
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
