--- a/test/fixtures/topics.yml
+++ b/test/fixtures/topics.yml
@@ -19,13 +19,13 @@
 one:
   question: MyString
   questionArray: MyText
-  indexArrayOfAnswer: MyText
+  indexAnswerOfArray: MyText
   userId: 1
   examId: 1
 
 two:
   question: MyString
   questionArray: MyText
-  indexArrayOfAnswer: MyText
+  indexAnswerOfArray: MyText
   userId: 1
   examId: 1
